# tusas-hgu-control-system

./: .claude.json  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  FB_HGU_Motor_Control_Simple.scl  File_Deprecation_Strategy.md  Frontend-OPC-Binding-Table-final.csv  HGU_Error_Alarm_List.csv  HGU_Error_Alarm_List_Complete_Specific.csv  HGU_Error_Alarm_List_Detailed.csv  MOTORS_PAGE_IMPLEMENTATION.md  Migration_Implementation_Plan.md  Migration_Implementation_Summary.md  Migration_Validation_Strategy.md  OPC_Fault_Variables_List.md  PORT_RULES.md  PR Program.md  SCADA_Design_Guidelines.md  SCADA_Layout_Analysis.md  SESSION_PROGRESS.md  SONDURUM.md  TIA_Portal_V17_Compatibility_Analysis.md  TUSAS_HGU_V17_Architecture_Summary.md  UI_Monitoring_Variables_Complete.csv  all-variables.json  bash.exe.stackdump  check-ports.ps1  config-lock.ps1  metadata.json  port-guardian.ps1  start-safe.ps1  start-system.ps1
.claude/: BACKEND_AGENT.md  CLAUDE.md  DASHBOARD_AGENT.md  FRONTEND_AGENT.md  OPC_AGENT.md  settings.local.json
.claude/agents/: mvvm-architect.md  scada-ui-designer.md  tia-v17-hydraulic-specialist.md  ui-modernizer.md  wpf-mvvm-ui-specialist.md
.serena/: project.yml
.serena/cache/csharp/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: Calibration_Management_UI_Requirements.md  PLC_Development_Context.md  TIA_Portal_CASE_Syntax_Rule.md  TIA_Portal_V17_Empty_Blocks_Syntax.md  TIA_Portal_V17_Timer_PT_Parameter_Rule.md  TUSAS_HGU_Alarm_System_Complete.md  TUSAS_HGU_V17_Implementation_Complete.md  architecture_overview.md  can_valve_flowmeter_protocol_spec.md  canopen_tcp_implementation_design.md  code_style_conventions.md  dashboard_architecture.md  function_blocks_technical_analysis.md  hgu_dashboard_ui_design.md  main_scl_compilation_errors_fix.md  main_scl_tia_portal_fix.md  motor_control_system_analysis.md  pid_compact_v22_implementation_guide.md  project_overview.md  safety_system_implementation_final.md  sensor_systems_comprehensive_final.md  sensor_systems_mapping_analysis.md  suggested_commands.md  system_algorithms_deep_analysis.md  task_completion_guidelines.md  tech_stack.md  tia_portal_compatibility_fixes.md  tusas_hgu_opc_architecture.md  ui_monitoring_valve_feedback_variables.md
System/PLC/OPC/: README.md  hgu_simulator.py  opcua-client.config  opcua_to_influxdb.py  quick_test.py  test_opcua_client.py  test_plcsim_opcua.py
System/PLC/OPC/cpp_client/: CMakeLists.txt  QUICK_START.md  README.md  README_SETUP.md  VISUAL_STUDIO_SETUP.md  VS_MINIMAL_INSTALL.md  build.bat  install_vs_buildtools.bat  setup_dev_environment.bat  setup_simple.bat  vcpkg.json
System/PLC/OPC/cpp_client/config/: config.json  install_service.bat  uninstall_service.bat
System/PLC/OPC/cpp_client/include/: common.hpp  config.hpp  data_manager.hpp  influxdb_writer.hpp  logger.hpp  opcua_client.hpp  sensor_mapping.hpp  service.hpp
System/PLC/OPC/cpp_client/src/: config.cpp  data_manager.cpp  hgu_minimal.cpp  hgu_production_client.cpp  hgu_simple_production.cpp  influxdb_writer.cpp  logger.cpp  main.cpp  main_simple.cpp  main_working.cpp  opcua_client.cpp  opcua_simple_test.cpp  opcua_test.cpp  opcua_test_safe.cpp  service.cpp
System/PLC/S7-1500/Backup/: .gitkeep
System/PLC/S7-1500/Development/: DB_HGU_Execution.scl  README_TIA_Portal_Integration.md  TIA_Portal_Hardware_Config.md  Tag Name,Address,Data Type,Comment.csv
System/PLC/S7-1500/Documentation/: .gitkeep  PLCSIM_Setup_Guide.md
System/PLC/S7-1500/Project/: .gitkeep
data/: cipher-sessions.db-shm  cipher-sessions.db-wal
tusas-hgu-modern/: test-ui.html
tusas-hgu-modern/Frontend/: package-lock.json  package.json  tsconfig.json  vite.config.ts
tusas-hgu-modern/Frontend/src/: App-backup.tsx  App-with-influxdb.tsx  App.css  App.tsx  AppWrapper.tsx  INFLUXDB_IMPLEMENTATION_SUMMARY.md  influxdb-integration-patch.md  main.tsx
tusas-hgu-modern/Frontend/src-tauri/: tauri.conf.json
tusas-hgu-modern/Frontend/src/contexts/: AuthContext.tsx
tusas-hgu-modern/Frontend/src/hooks/: useAuth.ts  useAuthenticatedFetch.ts  (+2 more)
tusas-hgu-modern/backend/: DB_HGU_EXECUTION_V17.csv  TUSAS.HGU.Modern.sln
tusas-hgu-modern/backend/TUSAS.HGU.API/: Program.cs  TUSAS.HGU.API.csproj  TUSAS.HGU.API.http  appsettings.json  schema.sql  seed_logs.sql  tusas_hgu_auth.db
tusas-hgu-modern/backend/TUSAS.HGU.Core/: Class1.cs  TUSAS.HGU.Core.csproj
tusas-hgu-modern/database/: schema.sql
(+210 files in other folders)
